fix slider button alignment

--- a/static/css/app/search_results.css
+++ b/static/css/app/search_results.css
@@ -1,4 +1,4 @@
-.search .search-result-wrapper {
+.search-result-wrapper {
     padding: 0 3rem 0 3rem;
 }
 
